--- a/css-positioning-practice/positionstyles.css
+++ b/css-positioning-practice/positionstyles.css
@@ -2,27 +2,31 @@
 /* Activity 1 styles */
 .content1 {
   /* This is the parent of the activity 1 boxes. */
-
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 20px;
 }
 .red1 { 
-  width: 100px; 
+  grid-column: 1/3;
   height: 100px; 
   background-color: red; 
 
 } 
 .green1 {
-  width: 100px; 
-  height: 100px; 
+  margin: auto;
+  width: 110px; 
+  height: 120px; 
   background-color: green; 
 
 } 
 .yellow1 {
-  width: 100px; 
-  height: 100px; 
+  margin: auto;
+  width: 110px; 
+  height: 120px; 
   background-color: gold; 
 } 
 .blue1 {
-  width: 100px; 
+  grid-column: 1/3;
   height: 100px; 
   background-color: blue; 
 } 
