--- a/css-positioning-practice/positionstyles.css
+++ b/css-positioning-practice/positionstyles.css
@@ -33,6 +33,8 @@
 /* Activity 2 styles */ 
 .content2 {
   /* This is the parent of the activity 2 boxes. */
+  display: grid;
+  grid-template-columns: repeat(5,50px);
 }
 .red2 {
   width: 100px; 
@@ -42,41 +44,47 @@
 .green2 { 
   width: 100px; 
   height: 100px; 
-  background-color: green; 
+  background-color: green;
+  margin-top: 50px; 
+
 } 
 .yellow2 {
   width: 100px; 
   height: 100px; 
   background-color: gold; 
+  margin-top: 100px;
 } 
 .blue2 {
   width: 100px; 
   height: 100px; 
   background-color: blue; 
+  margin-top: 150px;
 } 
 /* Activity 3 styles */ 
 .content3 {
   /* This is the parent of the activity 3 boxes. */
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  column-gap: 40px;
 }
 .red3 {
-  width: 100px; 
   height: 100px; 
-  background-color: red; 
+  background-color: red;
+  grid-column: 1/3;
 } 
 .green3 {
-  width: 100px; 
   height: 100px; 
   background-color: green;
 } 
 .yellow3 {
-  width: 100px; 
   height: 100px; 
   background-color: gold; 
 } 
 .blue3 {
-  width: 100px;
   height: 100px; 
-  background-color: blue; 
+  background-color: blue;
+  grid-column: 1/3;
+
 } 
 /* Activity 4 styles */ 
 .content4 {
