--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -10,6 +10,8 @@ Fonts are separated by a & */
   --secondary-color:#43a5ff ;
   --accent1-color: #E6F4F1;
   --accent2-color: #F5FAFF;
+  --accent3-color: #58908B;
+  
 
   /* change the values below to your chosen font(s) */
   --heading-font: 'Montserrat', sans-serif;
