--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -9,7 +9,9 @@ Fonts are separated by a & */
   --primary-color: #7592BC  ;
   --secondary-color:#43a5ff ;
   --accent1-color: #E6F4F1;
-  --accent2-color: #F5FAFF;
+  --accent2-color: hsl(210, 100%, 98%);
+  --accent3-color:#58908B;
+
 
   /* change the values below to your chosen font(s) */
   --heading-font: 'Montserrat', sans-serif;
@@ -33,10 +35,23 @@ h1, h2, h3 {
     font-family: --heading-font;
 }
 #content{
-    max-width: 1600px;
+    max-width: 1400px;
     margin: 0 auto;
 }
 
+header{
+    display: grid;
+    grid-template-columns: 150px auto;
+}
+nav {
+    display: flex;
+    justify-content: space-around;
+}
+#logo_link {
+    padding-top: 5px;
+    justify-self: center;
+    align-self: center;
+}
 nav a, #hero-msg h1, #hero-msg h4, .hero-btn-box, main section{
     text-align: center;
 }
@@ -61,7 +76,14 @@ nav a, .join, footer a{
 
 .card-img {
     border: 10px solid #7592BC;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px var(--accent3-color);
 }
+.card-img:hover {
+    opacity: .6;
+    transform: scale(1.1);
+}
+          
 main section img {
     box-sizing: border-box;
 }
@@ -92,12 +114,13 @@ header {
 
 #logo_link{
     width: 90px;
+    padding-top: 5px;
+    justify-self: center;
+    align-self: center;
 }
 nav a {
-    padding:1em;
-    min-width: 120px;
-    text-decoration: none;
-    padding: 18px;    
+    justify-self: center;
+    align-self: center;
 }
 
 nav a:link, nav a:visited {
@@ -108,13 +131,88 @@ nav a:link, nav a:visited {
     background-color: var(--nav-hover-background-color);
   }
 
+#hero{
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px; 
+
+}
+#hero-box {
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
+}
+#hero-msg {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 100px;
+}
+#hero-msg h4 {
+    color: white;
+}
+#hero-img{
+    display: block;
+    margin: auto;
+}
+.card-img, .mountains {
+    width: 100%;
+}
+
+.home-grid{
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
+}
+.rivers-card {
+    grid-column: 2 / 4;
+    grid-row: 2 / 3;
+  }
+  
+  .camping-card {
+    grid-column: 5 / 7;
+    grid-row: 2 / 3;
+  }
+  
+  .rapids-card {
+    grid-column: 8 / 10;
+    grid-row: 2 / 3;
+  }
+  
+  #background {
+    grid-column: 1 / 11;
+    grid-row: 4 / 9;
+  }
+  
+  .mountains {
+    grid-column: 2 / 7;
+    grid-row: 5 / 8;
+    box-shadow: 5px 5px 10px var(--accent3-color);
+  }
+  
+  .msg {
+    grid-column: 6 / 10;
+    grid-row: 6 / 7;
+    box-shadow: 5px 5px 10px var(--accent3-color);
+    padding: 20px;
+  }
+
 .icon {
     width: 80px;
 }
 
+footer {
+    padding: 25px 50px;
+    margin-top: 200px; 
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
 footer,.msg{
     color: var(--accent1-color);
-    background-color: var(--paragraph-background-color);
+    background-color: var(--accent3-color);
+}
+.msg p{
+    font-size: 14px;
 }
 
 footer p {
@@ -123,3 +221,48 @@ footer p {
 footer p a:hover {
     text-decoration: underline;
 }    
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-img{
+        width: 100%;
+        margin: auto;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    .home-title {
+        font-size: 25px;
+        color: #6f7364;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
+}
