Added some styles to the nav bar

--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -47,6 +47,13 @@ nav {
     display: flex;
     justify-content: space-around;
 }
+nav a{
+    display: flex;
+    justify-content: space-around;
+    padding-left: 20px;
+    padding-right: 20px;
+    border-radius: 5px;
+}
 #logo_link {
     padding-top: 5px;
     justify-self: center;
