--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -273,3 +273,43 @@ footer p a:hover {
         margin-top: 25px;
     }
 }
+
+form {
+    margin: 20px;
+    padding: 20px;
+    background-color: #f2f2f2;
+    border-radius: 5px;
+    box-shadow: 0px 0px 10px #888888;
+    font-family: Arial, sans-serif;
+    font-size: 16px;
+  }
+  
+  label {
+    display: inline-block;
+    width: 80px;
+    margin-bottom: 10px;
+    font-weight: bold;
+  }
+  
+  textarea, input[type="text"] {
+    width: 90%;
+    padding: 5px;
+    border-radius: 5px;
+    border: none;
+    background-color: #fff;
+    box-shadow: 0px 0px 5px #888888;
+    resize: vertical;
+  }
+  
+  input[type="submit"] {
+    background-color: var(--primary-color);
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+  
+  input[type="submit"]:hover {
+    background-color: var(--accent3-color);
+  }
